--- a/src/CryptStr.csproj
+++ b/src/CryptStr.csproj
@@ -3,6 +3,19 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>cryptstr</ToolCommandName>
+    <PackageOutputPath>./nupkg</PackageOutputPath>
+    
+    <PackageId>CryptStr</PackageId>
+    <Version>0.1.0</Version>
+    <Authors>neko3cs</Authors>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Cocona" Version="1.4.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
 
 </Project>
