--- a/src/CryptStr.csproj
+++ b/src/CryptStr.csproj
@@ -2,15 +2,18 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    
+    <TargetFramework>netcoreapp3.1</TargetFramework>  
+    <PackageId>CryptStr</PackageId>
+    <PackageTags>Encryption;</PackageTags>
+    <PackageProjectUrl>https://github.com/neko3cs/cryptstr</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/neko3cs/cryptstr.git</RepositoryUrl>
+    <Version>1.0.2</Version>
+    <Authors>neko3cs</Authors>
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>cryptstr</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
-    
-    <PackageId>CryptStr</PackageId>
-    <Version>1.0.0</Version>
-    <Authors>neko3cs</Authors>
   </PropertyGroup>
 
   <ItemGroup>
